--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ img[alt="pinoy-polvoron-logo"]{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    height: 100vh;
 }
 
 .content h1{
@@ -67,6 +68,7 @@ img[alt="pinoy-polvoron-logo"]{
     width: 100%;
     background-color:#dcc7a8;
     display: flex;
+    height: 95vh;
 }
 
 .container2 .content{
@@ -97,11 +99,13 @@ img[alt="pinoy-polvoron-logo"]{
 
 .container3 .content{
     width: 100%;
+    height: 95vh;
     display: flex;
     flex-direction: column;
     align-content: center;
     align-items: center;
     background-color: #efefef;
+    padding-bottom: 30px;
 }
 
 .container3 .content h4{
@@ -109,13 +113,14 @@ img[alt="pinoy-polvoron-logo"]{
 }
 .footer{
     margin-top: 10px;
-    height: 30px;
+    height: 25px;
     width: 100%;
     background-color: #161616;
 }
 
 .cards{
     width: 100%;
+    height: 60vh;
     display: flex;
     justify-content: center;
     gap: 5rem;
@@ -128,11 +133,55 @@ img[alt="pinoy-polvoron-logo"]{
 .cards .card{
     width: 300px;
     height: 350px;
-    box-shadow: 0px 3px 5px 3px #414141;
+    box-shadow: 0px 3px 3px 2px #414141;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    border-radius: 10px;
+}
+.container4{
+    width: 100%;
+    height: 80vh;
 }
 
+.container4 .content{
+    width: 100%;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    background-color: #dcc7a8;
+}
 
+.reviews{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 5rem;
+}
+
+.review{
+    width: 250px;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    background-color: #f1f1f1;
+
+    align-items: center;
+    padding: 8px 32px;
+}
+
+.review img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 1px solid black;
+}
+
+.review h4{
+    color: red;
+    font-size: 1.2rem;
+    font-weight: bolder;
+}
