--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body,html {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 img[alt="pinoy-polvoron-logo"]{
