--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body,html {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
-  /* scroll-behavior: smooth; */
+  scroll-behavior: smooth;
 }
 
 img[alt="pinoy-polvoron-logo"]{
@@ -112,12 +112,29 @@ img[alt="pinoy-polvoron-logo"]{
     font-size: 1.3rem;
 }
 .footer{
-    margin-top: 10px;
+    /* margin-top: 10px; */
     height: 25px;
     width: 100%;
     background-color: #161616;
+    padding:10px 0px;
 }
 
+.footer a{
+    text-decoration: none;
+    color: #f1f1f1;
+    font-size: 1rem;
+    margin-left: 20px;
+}
+.footer a:hover{
+    color: #dcc7a8;
+}
+
+.footer span{
+    float: right;
+    color: #f1f1f1;
+    margin-right: 20px;
+    font-style: italic;
+}
 .cards{
     width: 100%;
     height: 60vh;
@@ -139,10 +156,24 @@ img[alt="pinoy-polvoron-logo"]{
     justify-content: space-around;
     align-items: center;
     border-radius: 10px;
+    transition: 0.5s ease-out;
+}
+
+.card .name{
+    font-size: 1.5rem;
+}
+.card i{
+    font-size: 1.3rem;
+    cursor: pointer;
+}
+
+.cards .card:hover{
+    background-color: #dcc7a8;
+    transform: scale(105%);
 }
 .container4{
     width: 100%;
-    height: 80vh;
+    height: 100vh;
 }
 
 .container4 .content{
@@ -150,6 +181,7 @@ img[alt="pinoy-polvoron-logo"]{
     height: inherit;
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-content: center;
     align-items: center;
     background-color: #dcc7a8;
@@ -184,6 +216,11 @@ img[alt="pinoy-polvoron-logo"]{
     height: 150px;
     border-radius: 50%;
     border: 1px solid black;
+    transition: 0.3s ease-out;
+}
+
+.review img:hover{
+    transform: scale(105%);
 }
 
 .review h4{
@@ -198,4 +235,51 @@ img[alt="pinoy-polvoron-logo"]{
 
 .stars i{
     color: gold !important;
+}
+.container5{
+    width: 100%;
+    height: 80vh;
+    display: flex;
+}
+
+.img{
+    width: 60%;
+    height: inherit;
+    background: linear-gradient(-90deg, #dcc7a8ab, #dcc7a800),url("./polvo.png");
+    background-size: cover;
+    background-position: right bottom;
+    border-right: 0.3rem solid red;
+
+}
+
+.img img{
+    width: 100%;
+    height: inherit;
+}
+
+.container5 .content{
+    display: flex;
+    flex-direction: column;
+    padding:50px;
+}
+.container5 h3{
+    color:red;
+}
+
+.container5 h5{
+    font-size: 1.3rem;
+}
+
+.container5 i{
+    font-size: 3rem;
+    transition: 0.5s ease-out;
+}
+.container5 i:hover{
+    opacity: 50%;
+}
+
+.icons{
+    display: flex;
+    width: 80%;
+   gap: 30px;
 }
