--- a/style.css
+++ b/style.css
@@ -117,6 +117,8 @@ img[alt="pinoy-polvoron-logo"]{
     width: 100%;
     background-color: #161616;
     padding:10px 0px;
+    position: relative;
+    z-index: 88;
 }
 
 .footer a{
@@ -248,7 +250,7 @@ img[alt="pinoy-polvoron-logo"]{
     background: linear-gradient(-90deg, #dcc7a8ab, #dcc7a800),url("./polvo.png");
     background-size: cover;
     background-position: right bottom;
-    border-right: 0.3rem solid red;
+    box-shadow: 0.3rem 5px 10px 2px red;
 
 }
 
